Fixed manual typo. Split streams for warnings and status messages.

--- a/test/tests2.4/Makefile
+++ b/test/tests2.4/Makefile
@@ -70,7 +70,7 @@ fink:
 	$(SPLINT) fink.c 
 
 driverstub:
-	$(SPLINT) driverstub.c
+	$(SPLINT) driverstub.c -sysdirs "/usr/"
 
 alignof:
 	$(SPLINT) alignof.c -expect 2
