Apparently splint does not correctly handle the case in which a #defined constant is used in the function constraint unless it's been specified with the constant annotation.
Modified splint to halt and print a message suggesting that the constant annotation be used.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -18,6 +18,10 @@ splintlib_DATA = \
 ## Include them in the distribution
 EXTRA_DIST = $(splintlib_DATA)
 
+##get rid of lcd files if the user does a make clean
+CLEANFILES = posix.lcd standard.lcd unix.lcd \
+             posixstrict.lcd  standardstrict.lcd  unixstrict.lcd
+
 
 ## Rules to make splint & the dumps
 
