--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -101,6 +101,10 @@ splintlib_DATA = \
 
 EXTRA_DIST = $(splintlib_DATA)
 
+CLEANFILES = posix.lcd standard.lcd unix.lcd \
+             posixstrict.lcd  standardstrict.lcd  unixstrict.lcd
+
+
 SPLINT = $(top_builddir)/src/splint$(EXEEXT)
 subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
@@ -186,6 +190,7 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-rm -f Makefile $(CONFIG_CLEAN_FILES) stamp-h stamp-h[0-9]*
